--- a/nic_z_tego_nie_bd/Properties/Resources.resx
+++ b/nic_z_tego_nie_bd/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="Minecraft_Textures_x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Minecraft_Textures_x32.zip;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="notify_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\notify_sound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="pytacz" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\pytacz.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
